fixed autotest issues

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 Со мной всегда были рядом не только мои близкие, 
                 но и мои одногруппники и команда сопровождения, 
                 которая каждый раз помогала мне, когда я что-то не понимал, 
-                большое им спасибо за это! <3
+                большое им спасибо за это!
               </p>
             </div>
             <div class="cards__button">
