--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="card-list__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_brightness">
               <p class="card__text">
                 Это было самое начало пути. 
                 На этом этапе важно было проникнуться основами и настроиться на учёбу. 
@@ -89,7 +89,7 @@
             <h2 class="card-list__title">1 спринт: Я — чистый лист</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_contrast">
               <p class="card__text">
                 На первых этапах мы работали со страхами и сомнениями, 
                 которые часто испытывают новички. Один из них — страх перед чистым листом. 
@@ -127,7 +127,7 @@
             <h2 class="card-list__title">1 спринт: А если не получится?</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_blur">
               <p class="card__text">
                 Первый проект — позади! Но это всё ещё самое начало пути. 
                 Радость могла быстро померкнуть и смениться ожиданием провала. 
@@ -163,7 +163,7 @@
             <h2 class="card-list__title">2 спринт: Погоня за идеалом</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_opacity">
               <p class="card__text">
                 На этом этапе вы уже достаточно разбирались в основах вёрстки,
                 чтобы понять, как много ещё впереди. 
@@ -202,7 +202,7 @@
             <h2 class="card-list__title">2 спринт: О тех, кто рядом</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_grayscale">
               <p class="card__text">
                 Всё это время вы были не одиноки 
                 (хотя, возможно, иногда и чувствовали, что одни против целого мира). 
@@ -242,7 +242,7 @@
             <h2 class="card-list__title">3 спринт: Обходные стратегии</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_saturate">
               <p class="card__text">
                 На этом курсе вы постоянно решали разные задачи. 
                 В какой-то момент вам могло показаться, что решения просто иссякли. 
@@ -279,7 +279,7 @@
             <h2 class="card-list__title">3 спринт: Когда опускаются руки</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_sepia">
               <p class="card__text">
                 Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. 
                 Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться,
@@ -317,7 +317,7 @@
             <h2 class="card-list__title">«Сейчас я здесь»</h2>
             <div class="card-image__container">
               <span class="card__image-text">&lt;/HTML&gt;</span>
-              <img src="./images/image.png" alt="" class="card__image">
+              <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_combinate">
               <p class="card__text">
                 Сейчас вы уже очень много знаете о вёрстке. 
                 Но это только начало. Во-первых, впереди ещё много материала про «красотищу». 
