--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <article class="card">
             <h2 class="card-list__title">1 спринт: А если не получится?</h2>
             <div class="card-image__container">
-              <span class="card__image-text">&lt;/HTML&gt;</span>
+              <span class="card__image-text">&lt;CSS&gt;</span>
               <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_blur">
               <p class="card__text">
                 Первый проект — позади! Но это всё ещё самое начало пути. 
@@ -162,7 +162,7 @@
           <article class="card">
             <h2 class="card-list__title">2 спринт: Погоня за идеалом</h2>
             <div class="card-image__container">
-              <span class="card__image-text">&lt;/HTML&gt;</span>
+              <span class="card__image-text">&lt;desigions&gt;</span>
               <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_opacity">
               <p class="card__text">
                 На этом этапе вы уже достаточно разбирались в основах вёрстки,
@@ -201,7 +201,7 @@
           <article class="card">
             <h2 class="card-list__title">2 спринт: О тех, кто рядом</h2>
             <div class="card-image__container">
-              <span class="card__image-text">&lt;/HTML&gt;</span>
+              <span class="card__image-text">care</span>
               <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_grayscale">
               <p class="card__text">
                 Всё это время вы были не одиноки 
@@ -241,7 +241,7 @@
           <article class="card">
             <h2 class="card-list__title">3 спринт: Обходные стратегии</h2>
             <div class="card-image__container">
-              <span class="card__image-text">&lt;/HTML&gt;</span>
+              <span class="card__image-text">&lt;support&gt;</span>
               <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_saturate">
               <p class="card__text">
                 На этом курсе вы постоянно решали разные задачи. 
@@ -278,7 +278,7 @@
           <article class="card">
             <h2 class="card-list__title">3 спринт: Когда опускаются руки</h2>
             <div class="card-image__container">
-              <span class="card__image-text">&lt;/HTML&gt;</span>
+              <span class="card__image-text">&lt;lifes-style: none;&gt;</span>
               <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_sepia">
               <p class="card__text">
                 Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. 
@@ -316,7 +316,7 @@
           <article class="card">
             <h2 class="card-list__title">«Сейчас я здесь»</h2>
             <div class="card-image__container">
-              <span class="card__image-text">&lt;/HTML&gt;</span>
+              <span class="card__image-text">&lt;experience&gt;</span>
               <img src="./images/image.png" alt="дом на колесах стоит в лунной ночи" class="card__image filter_combinate">
               <p class="card__text">
                 Сейчас вы уже очень много знаете о вёрстке. 
