fixed layout bugs

--- a/index.html
+++ b/index.html
@@ -363,9 +363,11 @@
     <dialog class="dialog" id="dialog-save">
       <div class="dialog__container">
         <div class="dialog__warning">
-          <svg class="footer__button-image dialog-image" viewBox="0 0 39 39">
-            <use href="./svg/floppy.svg#floppy" />
-          </svg> 
+          <div class="dialog__image-container">
+            <svg class="footer__button-image dialog-image" viewBox="0 0 39 39">
+              <use href="./svg/floppy.svg#floppy" />
+            </svg> 
+          </div>
           <span>Вставьте дискету, чтобы продолжить</span>   
         </div>
         <form method="dialog">
