--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                 а вдруг будет слишком сложно? что, если я не справлюсь?
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале первого спринта.
+                В начале, меня иногда посещали такие вопросы, 
+                но я просто не обращал на них внимание и учился.
               </p>
             </div>
             <div class="cards__button">
@@ -133,7 +134,8 @@
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании первого спринта.
+                После первого проекта я был уже на 100% уверен, что это - моя область, 
+                мой первый проект подтолкнул мою уверенность в том, что у меня все получится.
               </p>
             </div>
             <div class="cards__button">
@@ -170,7 +172,9 @@
                 чтобы сделать идеально, старались просто сделать.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале второго спринта.
+                Я всегда стараюсь сделать свои проекты близки к идеалу, 
+                я могу просидеть над созданием одной кнопки хоть час, хоть 2. 
+                (не знаю хорошо это или нет :) )
               </p>
             </div>
             <div class="cards__button">
@@ -207,7 +211,10 @@
                 Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании второго спринта.
+                Со мной всегда были рядом не только мои близкие, 
+                но и мои одногруппники и команда сопровождения, 
+                которая каждый раз помогала мне, когда я что-то не понимал, 
+                большое им спасибо за это!
               </p>
             </div>
             <div class="cards__button">
@@ -242,7 +249,9 @@
                 Значит, пришло время посмотреть на задачу под другим углом.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале третьего спринта.
+                Начало спринта для меня далось легко: 
+                адаптивность, переменные, гриды и т.д. - 
+                все эти темы мне безумно понравились и дались мне из-за этого намного легче чем остальные.
               </p>
             </div>
             <div class="cards__button">
@@ -278,7 +287,9 @@
                 Вспомните, откуда вы её черпали.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании третьего спринта.
+                После сдачи проекта я понял, 
+                что я уже что-то из себя представляю в этой области и готов был идти дальше, 
+                не смотря на все трудности, которые меня поджидают
               </p>
             </div>
             <div class="cards__button">
@@ -316,7 +327,7 @@
                 когда важен сам процесс познания. Ведь часто путь — и есть результат.
               </p>
               <p class="card__text">
-                Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+                Моя уверенность идти дальше всё также не иссякла и я готов учиться.
               </p>
             </div>
             <div class="cards__button">
